5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1601_588.log
== TEST (2019-03-30 02:24:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R100 = valor // 100

# Valor restante a ser sacado com notas menores que R$ 50
resto_R100 = valor % 100

# Quantidade de notas de R$ 10
notas_R50 = resto_R100 // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = resto_R100 % 50

# Quantidade de notas de R$ 2
notas_R10 = resto_R50 // 10

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 23, in <module>
    print(int(notas_R2))
NameError: name 'notas_R2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 02:25:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R100 = valor // 100

# Valor restante a ser sacado com notas menores que R$ 50
resto_R100 = valor % 100

# Quantidade de notas de R$ 10
notas_R50 = resto_R100 // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = resto_R100 % 50

# Quantidade de notas de R$ 2
notas_R10 = resto_R50 // 10

print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 02:25:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R100 = valor // 100

# Valor restante a ser sacado com notas menores que R$ 50
resto_R100 = valor % 100

# Quantidade de notas de R$ 10
notas_R50 = resto_R100 // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = resto_R100 % 50

# Quantidade de notas de R$ 2
notas_R10 = resto_R50 // 10

print(int(notas_R100))
print(int(notas_R50))
print(int(notas_R10))
-- EXECUTION TIME:
0.151624
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
